# simple-online-taxi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
nginx/: nginx.conf
src/frontend/: README.md  bun.lockb  package.json  test-alias.js  vue.config.js
src/frontend/public/: index.html
src/frontend/src/: App.vue  main.js  main.ts
src/frontend/src/@types/: stored.d.ts
src/frontend/src/assets/: base.css
src/frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
src/frontend/src/components/: NotFoundComponent.vue  RideTracking.vue
src/frontend/src/router/: index.js  index.ts
src/frontend/src/stores/: auth.store.js  drivers.store.js  index.js  rides.store.js
src/frontend/src/views/: HomeView.vue  ProfileView.vue  RegisterView.vue  RideHistoryView.vue  RideTrackingView.vue  SupportView.vue  index.js
src/simple_online_taxi/: .env-sample  __init__.py  db.py  main.py  settings.py  valkey.py
src/simple_online_taxi/alembic/: env.py
src/simple_online_taxi/alembic/versions/: 323abd841c5e_initial_migration.py  553f245cbd99_add_address_to_trips.py  5d7a28933b6f_add_username_to_user.py  e8dc3133e344_add_driver_and_trip_models.py
src/simple_online_taxi/modules/: __init__.py
src/simple_online_taxi/modules/trip/: repository.py  routes.py
src/simple_online_taxi/modules/trip/models/: db_models.py  schemas.py
src/simple_online_taxi/modules/user/: auth.py  exceptions.py  models.py  respository.py  routes.py  utils.py
src/simple_online_taxi/modules/user/models/: __init__.py  db_models.py  schemas.py
