[project]
name = "simple-online-taxi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zparto82", email = "zparto82@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_online_taxi"]
